--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
 .container{
     color: #333;
     margin: 0 auto;
-    text-align: center;
+    text-align:right;
 }
 h1{
     /* font-weight: normal;*/
